Upload data extractor in dataset

--- a/notebooks/0_dataset.ipynb
+++ b/notebooks/0_dataset.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "root_path = os.path.join(os.getcwd(), \"..\")\n",
+    "root_path = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "if root_path not in sys.path:\n",
     "    sys.path.insert(0, root_path)"
    ]
@@ -22,10 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as ptl\n",
-    "\n",
     "from src.config import Config\n",
-    "from src.dataset import DataLoader"
+    "from src.dataset import DataExtractor"
    ]
   },
   {
@@ -35,37 +33,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_loader = DataLoader(config=Config)\n",
-    "images = data_loader.extract_content_pdf(\n",
-    "    filepath=f\"{Config.RAW_DATA_PATH}/sach-nhung-cay-thuoc-va-vi-thuoc-viet-nam-45-51.pdf\"\n",
+    "extractor = DataExtractor(\n",
+    "    config=Config, \n",
+    "    logger_name=\"HerbExtractor\",\n",
+    "    logger_path=f\"{Config.LOG_PATH}/extraction.log\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "24bd3f66",
+   "id": "389ae4f5",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<PIL.PngImagePlugin.PngImageFile image mode=RGB size=2100x3071>,\n",
-       " <PIL.PngImagePlugin.PngImageFile image mode=RGB size=2059x3071>,\n",
-       " <PIL.PngImagePlugin.PngImageFile image mode=RGB size=2100x3071>,\n",
-       " <PIL.PngImagePlugin.PngImageFile image mode=RGB size=2100x3071>,\n",
-       " <PIL.PngImagePlugin.PngImageFile image mode=RGB size=2100x3071>,\n",
-       " <PIL.PngImagePlugin.PngImageFile image mode=RGB size=2100x3071>,\n",
-       " <PIL.PngImagePlugin.PngImageFile image mode=RGB size=2100x3071>]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-11-16 06:43:00 - HerbExtractor - INFO - Processing: data/raw/sach-nhung-cay-thuoc-va-vi-thuoc-viet-nam-1-200.pdf\n",
+      "2025-11-16 06:43:00 - HerbExtractor - INFO - Model: gemini-2.0-flash\n",
+      "2025-11-16 06:43:00 - HerbExtractor - INFO - Rate limit: 8 RPM\n",
+      "2025-11-16 06:43:00 - HerbExtractor - INFO - Max chunk size: 6000 chars\n",
+      "2025-11-16 06:43:00 - HerbExtractor - INFO - Overlap: 600 chars\n",
+      "2025-11-16 06:43:00 - HerbExtractor - INFO - Uploading PDF: data/raw/sach-nhung-cay-thuoc-va-vi-thuoc-viet-nam-1-200.pdf\n",
+      "2025-11-16 06:43:03 - HerbExtractor - INFO - File uploaded successfully: files/5957lwhfkd7s\n",
+      "2025-11-16 06:43:03 - HerbExtractor - INFO - Extracting text with structure preservation...\n",
+      "2025-11-16 06:43:52 - HerbExtractor - INFO - Extracted 13081 characters\n",
+      "2025-11-16 06:43:52 - HerbExtractor - INFO - Chunking optimized for scanned PDF...\n",
+      "2025-11-16 06:43:52 - HerbExtractor - WARNING - No complete herbs found with A-B-C-D-E structure\n",
+      "2025-11-16 06:43:54 - HerbExtractor - INFO - Cleaned up: files/5957lwhfkd7s\n",
+      "2025-11-16 06:43:54 - HerbExtractor - INFO - Deduplicating results...\n",
+      "2025-11-16 06:43:54 - HerbExtractor - INFO - Saving results\n",
+      "2025-11-16 06:43:54 - HerbExtractor - INFO - Saving to data/processed/thuoc_dong_y.json...\n",
+      "2025-11-16 06:43:54 - HerbExtractor - INFO - Successful chunks: 0/0\n",
+      "2025-11-16 06:43:54 - HerbExtractor - INFO - Failed chunks: 0/0\n",
+      "2025-11-16 06:43:54 - HerbExtractor - INFO - Total herbs: 0\n",
+      "2025-11-16 06:43:54 - HerbExtractor - INFO - Total prescriptions: 0\n",
+      "2025-11-16 06:43:54 - HerbExtractor - INFO - Total formulas: 0\n",
+      "\n",
+      "Extraction completed successfully!\n",
+      "Results saved to: /home/qctrung/Projects/machine-learning/traditional_medicine/data/processed\n"
+     ]
     }
    ],
    "source": [
-    "images"
+    "pdf_file = f\"{Config.RAW_DATA_PATH}/sach-nhung-cay-thuoc-va-vi-thuoc-viet-nam-1-200.pdf\"\n",
+    "    \n",
+    "try:\n",
+    "    results = extractor.process_pdf_file(str(pdf_file))\n",
+    "    print(f\"\\nExtraction completed successfully!\")\n",
+    "    print(f\"Results saved to: {Config.PROCESSED_DATA_PATH}\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"Error during extraction: {e}\")"
    ]
   }
  ],
