Change the number of pages from 7 to 6

--- a/notebooks/0_dataset.ipynb
+++ b/notebooks/0_dataset.ipynb
@@ -18,7 +18,7 @@
     "## **Processing Pipeline**\n",
     "\n",
     "1. PDF Chunking: Split 1300 pages into chunks of 200 pages/chunk with 30 pages overlap\n",
-    "2. Gemini API: Upload chunks and extract in groups of 8 pages with 3 pages overlap\n",
+    "2. Gemini API: Upload chunks and extract in groups of 7 pages with 3 pages overlap\n",
     "3. Deduplication: Fuzzy matching with similarity threshold 0.85\n",
     "4. Export: JSON + CSV format"
    ]
@@ -51,7 +51,7 @@
     "# Setup plotting style\n",
     "plt.style.use('seaborn-v0_8-darkgrid')\n",
     "sns.set_palette(\"husl\")\n",
-    "%matplotlib inline\n",
+    "# %matplotlib inline\n",
     "\n",
     "# Display settings\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -72,7 +72,8 @@
    "outputs": [],
    "source": [
     "from src.settings import settings\n",
-    "from src.dataset import DataExtractor"
+    "from src.dataset import DataExtractor\n",
+    "from src.utils import safe_path"
    ]
   },
   {
@@ -100,7 +101,7 @@
     "\n",
     "start_time = datetime.now()\n",
     "print(f\"Started at: {start_time.strftime('%Y-%m-%d %H:%M:%S')}\")\n",
-    "print(f\"Processing: {pdf_file}\\n\")\n",
+    "print(f\"Processing: {safe_path(pdf_file)}\\n\")\n",
     "\n",
     "try:\n",
     "    results = extractor.process_pdf_file(str(pdf_file))\n",
@@ -170,7 +171,7 @@
     "}\n",
     "\n",
     "for name, df in datasets.items():\n",
-    "    print(f\"\\n{name}:\")\n",
+    "    print(f\"{name}:\")\n",
     "    print(f\"Rows: {len(df):,}\")\n",
     "    print(f\"Columns: {len(df.columns)}\")\n",
     "    print(f\"Memory: {df.memory_usage(deep=True).sum() / 1024**2:.2f} MB\")\n",
@@ -186,7 +187,6 @@
    "source": [
     "def analyze_missing_data(df, name):\n",
     "    print(f\"\\n{name}\")\n",
-    "    print(\"-\" * 60)\n",
     "    \n",
     "    missing = df.isnull().sum()\n",
     "    missing_pct = (missing / len(df)) * 100\n",
