Add fallback model in ocr step to avoid text is too short

--- a/notebooks/0_dataset.ipynb
+++ b/notebooks/0_dataset.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d9706489",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,48 @@
    "execution_count": null,
    "id": "e49f7ba8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started at: 2025-11-22 15:01:24\n",
+      "Processing: data/raw/sach-nhung-cay-thuoc-va-vi-thuoc-viet-nam.pdf\n",
+      "\n",
+      "2025-11-22 15:01:24 - HerbExtractor - INFO - Processing: data/raw/sach-nhung-cay-thuoc-va-vi-thuoc-viet-nam.pdf\n",
+      "2025-11-22 15:01:24 - HerbExtractor - INFO - Model for OCR: gemini-2.0-flash\n",
+      "2025-11-22 15:01:24 - HerbExtractor - INFO - Model for text extraction: gemini-2.5-flash-lite\n",
+      "2025-11-22 15:01:24 - HerbExtractor - INFO - Rate limit: 15 RPM\n",
+      "2025-11-22 15:01:25 - HerbExtractor - INFO - Created: chunk_000_pages_0001-0200.pdf (200 pages)\n",
+      "2025-11-22 15:01:25 - HerbExtractor - INFO - Created: chunk_001_pages_0171-0370.pdf (200 pages)\n",
+      "2025-11-22 15:01:25 - HerbExtractor - INFO - Created: chunk_002_pages_0341-0540.pdf (200 pages)\n",
+      "2025-11-22 15:01:25 - HerbExtractor - INFO - Created: chunk_003_pages_0511-0710.pdf (200 pages)\n",
+      "2025-11-22 15:01:25 - HerbExtractor - INFO - Created: chunk_004_pages_0681-0880.pdf (200 pages)\n",
+      "2025-11-22 15:01:26 - HerbExtractor - INFO - Created: chunk_005_pages_0851-1023.pdf (173 pages)\n",
+      "2025-11-22 15:01:26 - HerbExtractor - INFO - Merging last 3 pages into previous chunk\n",
+      "2025-11-22 15:01:26 - HerbExtractor - INFO - Total chunks: 6\n",
+      "2025-11-22 15:01:26 - HerbExtractor - INFO - Total pages: 1023\n",
+      "2025-11-22 15:01:26 - HerbExtractor - INFO - Overlap: 30 pages between chunks\n",
+      "2025-11-22 15:01:26 - HerbExtractor - INFO - Processing chunk 1/6: data/raw/chunks/chunk_000_pages_0001-0200.pdf\n",
+      "2025-11-22 15:01:26 - HerbExtractor - INFO - Uploading PDF: data/raw/chunks/chunk_000_pages_0001-0200.pdf\n",
+      "2025-11-22 15:01:28 - HerbExtractor - INFO - File uploaded successfully: files/ql0xyy0hyms3\n",
+      "2025-11-22 15:01:28 - HerbExtractor - INFO - Processing PDF: 200 pages, 7 pages/chunk, 3 overlap\n",
+      "2025-11-22 15:02:23 - HerbExtractor - INFO - Pages 1-7: 23277 chars\n",
+      "2025-11-22 15:03:20 - HerbExtractor - INFO - Pages 5-11: 23015 chars\n",
+      "2025-11-22 15:04:18 - HerbExtractor - INFO - Pages 9-15: 31678 chars\n",
+      "2025-11-22 15:05:16 - HerbExtractor - INFO - Pages 13-19: 30731 chars\n",
+      "2025-11-22 15:05:59 - HerbExtractor - INFO - Pages 17-23: 13098 chars\n",
+      "2025-11-22 15:06:47 - HerbExtractor - INFO - Pages 21-27: 16342 chars\n",
+      "2025-11-22 15:07:18 - HerbExtractor - WARNING - Pages 25-31: too short (48 chars), retrying with gemini-2.0-flash-lite\n",
+      "2025-11-22 15:07:58 - HerbExtractor - INFO - ✓ Fallback successful: 3171 chars\n",
+      "2025-11-22 15:07:58 - HerbExtractor - INFO - Pages 25-31: 3171 chars\n",
+      "2025-11-22 15:08:48 - HerbExtractor - INFO - Pages 29-35: 16922 chars\n",
+      "2025-11-22 15:09:49 - HerbExtractor - INFO - Pages 33-39: 21270 chars\n",
+      "2025-11-22 15:10:47 - HerbExtractor - INFO - Pages 37-43: 23541 chars\n",
+      "2025-11-22 15:11:23 - HerbExtractor - INFO - Pages 41-47: 6673 chars\n"
+     ]
+    }
+   ],
    "source": [
     "extractor = DataExtractor(\n",
     "    settings=settings,\n",
